<resources>
    <string name="app_name">Trending Android Repositories</string>
    <string name="avatar_image_description">avatar image</string>
    <string name="watchers_icon_description">watchers icon</string>
    <string name="star_image_description">star icon</string>
    <string name="fork_image_description">fork image</string>
    <string name="license_title">License:</string>
    <string name="language_title">Language:</string>
</resources>
